# mr_trader

./: .env.example  .gitignore  pyproject.toml
airflow/: airflow.cfg
apis/ig/: __init__.py  accounts.py  client.py  costs.py  dealing.py  general.py  ig_client.py  markets.py  sentiment.py  watchlists.py
dags/: tutorial.py
scripts/: common.py  run_scheduler.py  run_standalone.py  run_triggerer.py  run_webserver.py
